--- a/_config.yml
+++ b/_config.yml
@@ -104,4 +104,4 @@ theme: hexo-theme-Chic
 deploy:
   type: git
   repo: https://github.com/Codeman-1999/Codeman-1999.github.io.git
-  branch: main
+  branch: TOKEN
